thrasyboulos/hydor/base/olympia/homeros/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeros
spec:
  selector:
    app: homeros
  ports:
    - name: "gateway"
      port: 8080
      targetPort: 8080
