thrasyboulos/hydor/base/olympia/homeros/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-to-homeros
  namespace: olympia
spec:
  endpointSelector:
    matchLabels:
      app: homeros
  ingress:
    - fromEntities:
        - all
  egress:
    - toEntities:
        - all
